# hpgsql

./: .env  .envrc  .gitignore  .hlint.yaml  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  INTERRUPTION-SAFETY.md  MIGRATING.md  README.md  Runfile  TODO.md  default.nix  fourmolu.yaml  shell.nix
.github/workflows/: main.yml
conf/dev-db/: pg_hba.conf  postgresql.conf
conf/test-db/: pg_hba.conf  postgresql.conf
hpgsql/: hpgsql.cabal
hpgsql-benchmarks/: LICENSE  hpgsql-benchmarks.cabal
hpgsql-benchmarks/src/: Main.hs
hpgsql-simple-compat/: LICENSE  hpgsql-simple-compat.cabal
hpgsql-simple-compat-tests/: Common.hs  Exception.hs  Interval.hs  Main.hs  Notify.hs  QuasiQuoters.hs  Serializable.hs  Time.hs  hpgsql-simple-compat-tests.cabal
hpgsql-simple-compat-tests/results/: malformed-input.expected  unique-constraint-violation.expected
hpgsql-simple-compat/src/Database/PostgreSQL/: LibPQ.hs  Query.hs  Simple.hs  Simple.hs-boot
hpgsql-simple-compat/src/Database/PostgreSQL/Query/: Functions.hs  SqlBuilder.hs  TH.hs  Types.hs
hpgsql-simple-compat/src/Database/PostgreSQL/Query/SqlBuilder/: Builder.hs  Class.hs  Types.hs
hpgsql-simple-compat/src/Database/PostgreSQL/Query/TH/: SqlExp.hs
hpgsql-simple-compat/src/Database/PostgreSQL/Simple/: Arrays.hs  Compat.hs  Copy.hs  Cursor.hs  Errors.hs  FromField.hs  FromField.hs-boot  FromRow.hs  FromRow.hs-boot  HStore.hs  HpgsqlUtils.hs  Internal.hs  Newtypes.hs  Notification.hs  Ok.hs  Range.hs  SqlQQ.hs  Time.hs  ToField.hs  ToField.hs-boot  ToRow.hs  ToRow.hs-boot  Transaction.hs  TypeInfo.hs  Types.hs
hpgsql-simple-compat/src/Database/PostgreSQL/Simple/HStore/: Implementation.hs  Internal.hs
hpgsql-simple-compat/src/Database/PostgreSQL/Simple/Internal/: PQResultUtils.hs
hpgsql-simple-compat/src/Database/PostgreSQL/Simple/Time/: Implementation.hs  Internal.hs
hpgsql-simple-compat/src/Database/PostgreSQL/Simple/Time/Internal/: Parser.hs  Printer.hs
hpgsql-simple-compat/src/Database/PostgreSQL/Simple/TypeInfo/: Macro.hs  Static.hs  Types.hs
hpgsql-simple-compat/test/: Main.hs  WRITING-TESTS
hpgsql-simple-compat/tools/: GenTypeInfo.hs  StringsQQ.hs
hpgsql-tests/: BasicTestsSpec.hs  ConnectivitySpec.hs  CopySpec.hs  DbUtils.hs  DocumentationExamplesSpec.hs  EncodingDecodingSpec.hs  HPgsqlSpec.hs  Main.hs  NotificationsSpec.hs  ParsingSpec.hs  PipelineSpec.hs  PreparedStatementsSpec.hs  SqlQuasiquoterSpec.hs  TestUtils.hs  ThreadSafetySpec.hs  TransactionSpec.hs  hpgsql-tests.cabal
hpgsql/src/: HPgsql.hs  Hpgsql.hs
hpgsql/src/HPgsql/: Base.hs  Builder.hs  Connection.hs  Encoding.hs  Field.hs  InternalTypes.hs  Locking.hs  Msgs.hs  Networking.hs  Newtypes.hs  Parsing.hs  Query.hs  SimpleParser.hs  Time.hs  TypeInfo.hs  Types.hs
hpgsql/src/Hpgsql/: Base.hs  Builder.hs  Cancellation.hs  Connection.hs  Copy.hs  Encoding.hs  Internal.hs  InternalTypes.hs  Locking.hs  Msgs.hs  Networking.hs  Notification.hs  Parsing.hs  ParsingInternal.hs  Pipeline.hs  Pool.hs  Query.hs  QueryInternal.hs  ScramSHA256.hs  SimpleParser.hs  Time.hs  Transaction.hs  TransactionStatusInternal.hs  TypeInfo.hs  Types.hs
hpgsql/src/Hpgsql/Encoding/: RowDecoderMonadic.hs  RowParserMonadic.hs
hpgsql/test/: DbUtils.hs  HPgsqlSpec.hs
nix/: haskell-packages.nix  nixpkgs.nix  run-db-tests.nix  run-hpgsql-simple-compat-db-tests.nix  test-shell-pg.nix
scripts/: run-benchmarks-db-internal.sh  run-benchmarks-single.sh  run-hpgsql-simple-compat-tests-db-internal.sh  run-tests-100.sh  run-tests-db-internal.sh  run-tests-system-resources.sh
