cabal-version:      1.12
name:               hpgsql-simple-compat
version:            0.7.0.1
synopsis:           Mid-Level PostgreSQL client library
description:
  Mid-Level PostgreSQL client library, forked from mysql-simple.

license:            BSD3
license-file:       LICENSE
author:             Bryan O'Sullivan, Leon P Smith
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:
  (c) 2011 MailRank, Inc.
  (c) 2011-2018 Leon P Smith
  (c) 2018-2020 Oleg Grenrus

category:           Database
build-type:         Simple
extra-source-files:
  CHANGES.md
  CONTRIBUTORS

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  exposed-modules:
    Database.PostgreSQL.Simple
    Database.PostgreSQL.Simple.Arrays
    Database.PostgreSQL.Simple.Copy
    Database.PostgreSQL.Simple.Errors
    Database.PostgreSQL.Simple.FromField
    Database.PostgreSQL.Simple.FromRow
    Database.PostgreSQL.Simple.HStore
    Database.PostgreSQL.Simple.HStore.Internal
    Database.PostgreSQL.Simple.Internal
    Database.PostgreSQL.Simple.Newtypes
    Database.PostgreSQL.Simple.Notification
    Database.PostgreSQL.Simple.Ok
    Database.PostgreSQL.Simple.Range
    Database.PostgreSQL.Simple.SqlQQ
    Database.PostgreSQL.Simple.Time
    Database.PostgreSQL.Simple.Time.Internal
    Database.PostgreSQL.Simple.ToField
    Database.PostgreSQL.Simple.ToRow
    Database.PostgreSQL.Simple.Transaction
    Database.PostgreSQL.Simple.TypeInfo
    Database.PostgreSQL.Simple.TypeInfo.Macro
    Database.PostgreSQL.Simple.TypeInfo.Static
    Database.PostgreSQL.Simple.Types

  -- Other-modules:
  other-modules:
    Database.PostgreSQL.Simple.Compat
    Database.PostgreSQL.Simple.HpgsqlUtils
    Database.PostgreSQL.Simple.HStore.Implementation
    Database.PostgreSQL.Simple.Internal.PQResultUtils
    Database.PostgreSQL.Simple.Time.Implementation
    Database.PostgreSQL.Simple.Time.Internal.Parser
    Database.PostgreSQL.Simple.Time.Internal.Printer
    Database.PostgreSQL.Simple.TypeInfo.Types

  -- GHC bundled libs
  build-depends:
      base
    , bytestring
    , case-insensitive
    , containers
    , template-haskell
    , text
    , aeson
    , attoparsec
    , hpgsql
    , hashable
    , streaming
    , time-compat
    , transformers
    , Only
    , postgresql-libpq
    , scientific
    , uuid-types
    , vector

  default-extensions:
    BangPatterns
    DoAndIfThenElse
    OverloadedStrings
    TypeOperators
    ViewPatterns

  ghc-options:        -Wall -fno-warn-name-shadowing

source-repository head
  type:     git
  location: http://github.com/haskellari/hpgsql-simple-compat
