cabal-version:      1.12
name:               hpgsql-simple-compat
version:            0.1.0.0
synopsis:           Fork of postgresql-simple implemented with hpgsql instead of postgresql-libpq.
description:
  This is a fork of postgresql-simple that tries to preserve its API as much as possible, but
  uses hpgsql instead of postgresql-libpq under the hood.
  The idea is to ease migrating to hpgsql itself. Check the GitHub for more information.

license:            BSD3
license-file:       LICENSE
-- Authors of postgresql-simple, postgresql-libpq, and postgresql-query, plus myself
author:             Bryan O'Sullivan, Leon P Smith, Aleksey Uimanov, Grant Monroe, Marcelo Zabani
maintainer:         Marcelo Zabani
copyright:
  (c) 2026 Marcelo Zabani
  (c) 2011 MailRank, Inc.
  (c) 2011-2018 Leon P Smith
  (c) 2018-2020 Oleg Grenrus
  (c) 2014 Aleksey Uimanov
  (c) 2010 Grant Monroe

category:           Database
homepage:           https://github.com/mzabani/hpgsql#readme
bug-reports:        https://github.com/mzabani/hpgsql/issues
build-type:         Simple

source-repository head
  type:     git
  location: http://github.com/mzabani/hpgsql/hpgsql-simple-compat

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  exposed-modules:
    -- postgresql-libpq
    Database.PostgreSQL.LibPQ
    -- postgresql-simple
    Database.PostgreSQL.Simple
    Database.PostgreSQL.Simple.Arrays
    Database.PostgreSQL.Simple.Copy
    Database.PostgreSQL.Simple.Cursor
    Database.PostgreSQL.Simple.Errors
    Database.PostgreSQL.Simple.FromField
    Database.PostgreSQL.Simple.FromRow
    Database.PostgreSQL.Simple.HStore
    Database.PostgreSQL.Simple.HStore.Internal
    Database.PostgreSQL.Simple.Internal
    Database.PostgreSQL.Simple.Newtypes
    Database.PostgreSQL.Simple.Notification
    Database.PostgreSQL.Simple.Ok
    Database.PostgreSQL.Simple.Range
    Database.PostgreSQL.Simple.SqlQQ
    Database.PostgreSQL.Simple.Time
    Database.PostgreSQL.Simple.Time.Internal
    Database.PostgreSQL.Simple.ToField
    Database.PostgreSQL.Simple.ToRow
    Database.PostgreSQL.Simple.Transaction
    Database.PostgreSQL.Simple.TypeInfo
    Database.PostgreSQL.Simple.TypeInfo.Macro
    Database.PostgreSQL.Simple.TypeInfo.Static
    Database.PostgreSQL.Simple.Types
    Database.PostgreSQL.Simple.HpgsqlUtils
    -- postgresql-query
    Database.PostgreSQL.Query
    Database.PostgreSQL.Query.Functions
    Database.PostgreSQL.Query.SqlBuilder
    Database.PostgreSQL.Query.SqlBuilder.Builder
    Database.PostgreSQL.Query.SqlBuilder.Class
    Database.PostgreSQL.Query.SqlBuilder.Types
    Database.PostgreSQL.Query.TH
    Database.PostgreSQL.Query.TH.SqlExp
    Database.PostgreSQL.Query.Types

  -- Other-modules:
  other-modules:
    Database.PostgreSQL.Simple.Compat
    Database.PostgreSQL.Simple.HStore.Implementation
    Database.PostgreSQL.Simple.Internal.PQResultUtils
    Database.PostgreSQL.Simple.Time.Implementation
    Database.PostgreSQL.Simple.Time.Internal.Parser
    Database.PostgreSQL.Simple.Time.Internal.Printer
    Database.PostgreSQL.Simple.TypeInfo.Types

  -- GHC bundled libs
  build-depends:
      base >= 4.18 && < 4.21
    , bytestring >= 0.11 && < 0.13
    , case-insensitive >= 1.2 && < 1.3
    , containers >= 0.6 && < 0.8
    , template-haskell >= 2.20 && < 2.23
    , text >= 2.0 && < 2.2
    , aeson >= 2.2 && < 2.3
    , attoparsec >= 0.14 && < 0.15
    , haskell-src-meta >= 0.8 && < 0.9
    , hpgsql >= 0.1 && < 0.2
    , hashable >= 1.5 && < 1.6
    , mtl >= 2.3 && < 2.4
    , streaming >= 0.2 && < 0.3
    , time-compat >= 1.9 && < 1.10
    , transformers >= 0.6 && < 0.7
    , Only >= 0.1 && < 0.2
    , scientific >= 0.3 && < 0.4
    , uuid-types >= 1.0 && < 1.1
    , vector >= 0.13 && < 0.14

  default-extensions:
      CPP
      BangPatterns
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveFunctor
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      LambdaCase
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      InstanceSigs
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NumericUnderscores
      OverloadedRecordDot
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeApplications
      TypeFamilies
      TypeFamilyDependencies
      TypeOperators
      QuasiQuotes
      TemplateHaskell
      ViewPatterns

  ghc-options: -Wall -Wincomplete-uni-patterns -Wunused-packages -Wpartial-fields -optP-Wno-nonportable-include-path -fno-warn-name-shadowing
