cabal-version: 2.0

name:           hpgsql-tests
version:        0.1.6
description:    Tests for hpgsql
homepage:       https://github.com/mzabani/hpgsql#readme
bug-reports:    https://github.com/mzabani/hpgsql/issues
author:         Marcelo Zabani
maintainer:     mzabani@gmail.com
copyright:      2025 Marcelo Zabani
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/mzabani/hpgsql

executable hpgsql-tests
  main-is: Main.hs
  other-modules:
      AllSpecs
      DbUtils
      HPgsqlSpec
      ParsingSpec
  hs-source-dirs:
      .
  default-extensions:
      BangPatterns
      DeriveAnyClass
      DeriveFunctor
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      LambdaCase
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      MultiParamTypeClasses
      NamedFieldPuns
      NumericUnderscores
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeApplications
      TypeFamilies
      TypeFamilyDependencies
      TypeOperators
      ViewPatterns
  -- -optP-Wno-nonportable-include-path fixes macOS builds: https://github.com/haskell/cabal/issues/4739#issuecomment-359209133
  ghc-options: -O2 -threaded -rtsopts "-with-rtsopts=-N" -Wunused-packages -optP-Wno-nonportable-include-path
  -- Until https://github.com/input-output-hk/haskell.nix/issues/231 is resolved,
  -- do not include hspec-discover in system-build-tools. We hack around the issue
  -- in flake.nix so both cabal and nix build work.
  -- build-tools:
  --     hspec-discover
  build-depends:
      aeson >= 2
    , async
    , base
    , bytestring
    , containers
    , hedgehog
    , hpgsql
    , hspec
    , hspec-hedgehog
    , random
    , safe-exceptions
    , scientific
    , streaming
    , text
    , time
    , vector
  default-language: Haskell2010
