cabal-version: 2.0

name:           hpgsql-tests
version:        0.1.6
description:    Tests for hpgsql
homepage:       https://github.com/mzabani/hpgsql#readme
bug-reports:    https://github.com/mzabani/hpgsql/issues
author:         Marcelo Zabani
maintainer:     mzabani@gmail.com
copyright:      2025 Marcelo Zabani
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/mzabani/hpgsql

flag threaded
  description: Build with the threaded runtime
  default: True
  manual: True

executable hpgsql-tests
  main-is: Main.hs
  other-modules:
      AllSpecs
      BasicTestsSpec
      ConnectivitySpec
      CopySpec
      DbUtils
      DocumentationExamplesSpec
      EncodingDecodingSpec
      NotificationsSpec
      ParsingSpec
      PipelineSpec
      SqlQuasiquoterSpec
      TestUtils
      ThreadSafetySpec
      TransactionSpec
  hs-source-dirs:
      .
  default-extensions:
      BangPatterns
      DeriveAnyClass
      DeriveFunctor
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      LambdaCase
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      MultiParamTypeClasses
      NamedFieldPuns
      NumericUnderscores
      OverloadedRecordDot
      OverloadedStrings
      QuasiQuotes
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeFamilyDependencies
      TypeOperators
      ViewPatterns
  -- -optP-Wno-nonportable-include-path fixes macOS builds: https://github.com/haskell/cabal/issues/4739#issuecomment-359209133
  ghc-options: -O1 -rtsopts -Wunused-packages -optP-Wno-nonportable-include-path
  if flag(threaded)
    ghc-options: -threaded "-with-rtsopts=-N"
  else
    ghc-options: -single-threaded
  build-depends:
      aeson >= 2
    , async
    , base
    , bytestring
    , case-insensitive
    , containers
    , hedgehog
    , hpgsql
    , hspec
    , hspec-hedgehog
    , postgresql-simple
    , random
    , safe-exceptions
    , scientific
    , streaming
    , text
    , time
    , uuid-types
    , vector
  default-language: Haskell2010
