cabal-version: 2.0

name:           hpgsql
version:        0.1.6
description:    hpgsql is a pure Haskell implementation of a PostgreSQL driver
homepage:       https://github.com/mzabani/hpgsql#readme
bug-reports:    https://github.com/mzabani/hpgsql/issues
author:         Marcelo Zabani
maintainer:     mzabani@gmail.com
copyright:      2025 Marcelo Zabani
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/mzabani/hpgsql

tested-with:
  GHC ==9.6.7
   || ==9.8.4
   || ==9.10.3

library
  exposed-modules:
      HPgsql
      HPgsql.Connection
      HPgsql.Field
      HPgsql.Types
      HPgsql.Parsing
      HPgsql.Query
      HPgsql.TypeInfo
  other-modules:
      HPgsql.Msgs
      HPgsql.Networking
      Paths_hpgsql
  autogen-modules:
      Paths_hpgsql
  hs-source-dirs:
      src
  default-extensions:
      BangPatterns
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveFunctor
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      LambdaCase
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NumericUnderscores
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeApplications
      TypeFamilies
      TypeFamilyDependencies
      TypeOperators
      ViewPatterns
  -- -optP-Wno-nonportable-include-path fixes macOS builds: https://github.com/haskell/cabal/issues/4739#issuecomment-359209133
  ghc-options: -O1 -Wall -Wincomplete-uni-patterns -Wunused-packages -Wpartial-fields -optP-Wno-nonportable-include-path
  build-depends:
      aeson >= 2
    , attoparsec
    , base
    , cereal
    , bytestring
    , containers
    , network
    , network-uri
    , Only
    , safe-exceptions
    , scientific
    , stm
    , streaming
    , template-haskell
    , text
    , time
    , transformers
    , vector
  default-language: Haskell2010
