cabal-version: 2.0

name:           hpgsql
version:        0.1.0.0
synopsis:       Pure Haskell PostgreSQL driver (no libpq involved)
description:    hpgsql is a pure Haskell implementation of a PostgreSQL driver
category:       Database
homepage:       https://github.com/mzabani/hpgsql#readme
bug-reports:    https://github.com/mzabani/hpgsql/issues
author:         Marcelo Zabani
maintainer:     mzabani@gmail.com
copyright:      2026 Marcelo Zabani
license:        BSD3
license-file:   LICENSE
build-type:     Simple
tested-with:
  GHC ==9.6.7
   || ==9.8.4
   || ==9.10.3

source-repository head
  type: git
  location: https://github.com/mzabani/hpgsql

library
  exposed-modules:
      Hpgsql
      Hpgsql.Builder
      Hpgsql.Cancellation
      Hpgsql.Connection
      Hpgsql.Copy
      Hpgsql.Encoding
      Hpgsql.Encoding.RowDecoderMonadic
      Hpgsql.InternalTypes
      Hpgsql.Notification
      Hpgsql.Parsing
      Hpgsql.Pipeline
      Hpgsql.Pool
      Hpgsql.Query
      Hpgsql.Time
      Hpgsql.Transaction
      Hpgsql.TypeInfo
      Hpgsql.Types
  other-modules:
      Hpgsql.Base
      Hpgsql.Internal
      Hpgsql.Locking
      Hpgsql.Msgs
      Hpgsql.Networking
      Hpgsql.QueryInternal
      Hpgsql.SimpleParser
      Paths_hpgsql
  autogen-modules:
      Paths_hpgsql
  hs-source-dirs:
      src
  default-extensions:
      CPP
      BangPatterns
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveFunctor
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      LambdaCase
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NumericUnderscores
      OverloadedRecordDot
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeApplications
      TypeFamilies
      TypeFamilyDependencies
      TypeOperators
      QuasiQuotes
      TemplateHaskell
      ViewPatterns
  -- -optP-Wno-nonportable-include-path fixes macOS builds: https://github.com/haskell/cabal/issues/4739#issuecomment-359209133
  ghc-options: -Wall -Wincomplete-uni-patterns -Wunused-packages -Wpartial-fields -optP-Wno-nonportable-include-path
  build-depends:
    Only >= 0.1 && < 0.2,
    aeson >= 2.2 && < 2.3,
    attoparsec >= 0.14 && < 0.15,
    base >= 4.18 && < 4.21,
    bytestring >= 0.11 && < 0.13,
    case-insensitive >= 1.2 && < 1.3,
    cereal >= 0.5 && < 0.6,
    containers >= 0.6 && < 0.8,
    cryptohash-md5 >= 0.11.7.1 && < 0.12,
    hashable >= 1.5 && < 1.6,
    haskell-src-meta >= 0.8 && < 0.9,
    network >= 3.2 && < 3.3,
    network-uri >= 2.6 && < 2.7,
    safe-exceptions >= 0.1 && < 0.2,
    scientific >= 0.3 && < 0.4,
    stm >= 2.5 && < 2.6,
    streaming >= 0.2 && < 0.3,
    template-haskell >= 2.20 && < 2.23,
    text >= 2.0 && < 2.2,
    time >= 1.12 && < 1.13,
    transformers >= 0.6 && < 0.7,
    uuid-types >= 1.0 && < 1.1,
    vector >= 0.13 && < 0.14
  default-language: Haskell2010
